--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
   "homepage": "https://github.com/icf-mrankin/cfskeleton#readme",
   "dependencies": {
     "jquery": "^3.3.1",
-    "qrcodejs": "^1.0.0",
-    "tether": "^1.4.5"
+    "popper.js": "^1.14.7",
+    "qrcodejs": "^1.0.0"
   },
   "devDependencies": {
-    "bootstrap": "^4.2.1",
-    "webpack": "^4.29.0"
+    "bootstrap": "^4.3.1",
+    "webpack": "^4.29.6"
   }
 }
