--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Quick startup for cf app",
   "main": "index.js",
   "scripts": {
+    "build-mac": "webpack --config webpack.prod.js && ./build.sh",
+    "build-win": "webpack --config webpack.prod.js && build.sh",
+    "watch": "webpack --config webpack.dev.js --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,12 +25,26 @@
   },
   "homepage": "https://github.com/icf-mrankin/cfskeleton#readme",
   "dependencies": {
+    "inputmask": "^4.0.6",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
     "qrcodejs": "^1.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^9.5.0",
     "bootstrap": "^4.3.1",
-    "webpack": "^4.29.6"
+    "clean-webpack-plugin": "^2.0.1",
+    "css-loader": "^2.1.1",
+    "expose-loader": "^0.7.5",
+    "file-loader": "^3.0.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "qrcode": "^1.3.3",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-merge": "^4.2.1",
+    "webpack-war-plugin": "^1.0.0-beta.3"
   }
 }
