--- a/db/mysql/liquibase.properties
+++ b/db/mysql/liquibase.properties
@@ -4,5 +4,5 @@ url:jdbc:mysql://localhost:3306/cfskeleton?autoReconnect=true&useSSL=false
 username:ColdFusion
 password:cfskeleton
 changeLogFile:changelog.xml
-logLevel:info
+logLevel:debug
 contexts:local
