--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   },
   "homepage": "https://github.com/icf-mrankin/cfskeleton#readme",
   "dependencies": {
+    "g": "^2.0.1",
     "inputmask": "^4.0.6",
     "jquery": "^3.4.1",
+    "npm": "^6.14.5",
     "popper.js": "^1.14.7",
     "qrcodejs": "^1.0.0"
   },
